scripts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kubeframe-ui
  name: kubeframe-ui
  namespace: kubeframe-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kubeframe-ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kubeframe-ui
    spec:
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#            - matchExpressions:
#              - key: beta.kubernetes.io/arch
#                operator: In
#                values:
#                - amd64
#                - ppc64le
#                - s390x
#        podAntiAffinity:
#          preferredDuringSchedulingIgnoredDuringExecution:
#          - podAffinityTerm:
#              labelSelector:
#                matchExpressions:
#                - key: ocm-antiaffinity-selector
#                  operator: In
#                  values:
#                  - console
#                - key: component
#                  operator: In
#                  values:
#                  - console
#              topologyKey: topology.kubernetes.io/zone
#            weight: 70
#          - podAffinityTerm:
#              labelSelector:
#                matchExpressions:
#                - key: ocm-antiaffinity-selector
#                  operator: In
#                  values:
#                  - console
#                - key: component
#                  operator: In
#                  values:
#                  - console
#              topologyKey: kubernetes.io/hostname
#            weight: 35
      containers:
      - env:
        - name: BACKEND_PORT
          value: "3000"
        - name: FRONTEND_URL
          value: https://kubeframe.apps.mlibra-cim-04.redhat.com
        - name: CLUSTER_API_URL
          value: https://kubernetes.default.svc:443
        - name: OAUTH2_CLIENT_ID
          value: "kubeframeoauth"
        - name: OAUTH2_REDIRECT_URL
          value: "https://kubeframe.apps.mlibra-cim-04.redhat.com/login/callback"
        - name: OAUTH2_CLIENT_SECRET
          value: "kubeframeoauthsecret"
#        - name: BACKEND_URL
#          value: https://kubeframe.apps.mlibra-cim-04.redhat.com
        image: quay.io/mlibra/kubeframe:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 1
          httpGet:
            path: /livenessProbe
            port: 3000
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: kubeframe-ui
        ports:
        - containerPort: 3000
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /readinessProbe
            port: 3000
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 3m
            memory: 40Mi
#        securityContext:
#          allowPrivilegeEscalation: false
#          capabilities:
#            drop:
#            - ALL
#          privileged: false
#          readOnlyRootFilesystem: true
#        terminationMessagePath: /dev/termination-log
#        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/certs
          name: kubeframe-ui-certs
#        - mountPath: /app/config
#          name: kubeframe-ui-config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
      terminationGracePeriodSeconds: 15
#      tolerations:
#      - effect: NoSchedule
#        key: dedicated
#        operator: Exists
#      - effect: NoSchedule
#        key: node-role.kubernetes.io/infra
#        operator: Exists
      volumes:
      - name: kubeframe-ui-certs
        secret:
          defaultMode: 420
          secretName: kubeframe-ui-certs
#      - configMap:
#          defaultMode: 420
#          name: kubeframe-ui-config
#        name: kubeframe-ui-config
