scripts/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubeframe-ui
  name: kubeframe-ui
  namespace: kubeframe-ui
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: https
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: kubeframe-ui
  type: ClusterIP
