scripts/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kubeframe-ui
  name: kubeframe-ui
  namespace: kubeframe-ui
spec:
  host: kubeframe.apps.mlibra-cim-04.redhat.com
  port:
    targetPort: https
  tls:
    # insecureEdgeTerminationPolicy: Redirect
    # termination: reencrypt
    termination: passthrough
  to:
    kind: Service
    name: kubeframe-ui
  wildcardPolicy: None
